--- a/newtask3.html
+++ b/newtask3.html
@@ -122,7 +122,7 @@ img:hover {
     <li><a href="https://www.w3schools.com/cpp/" target="blank">Learn C++</a></li>
     <li> <button type="button" name="SIGN-UPt">Sign-up</button></li>
      <li><button type="button" name="submit">Login</button></li>
-     <li><a href="">Know more about Technology</a> </li>
+     <li><a href="newknow.html">Know more about Technology</a> </li>
 
 
 
